fix top-clues on mobile

--- a/css/crossword.mobile.css
+++ b/css/crossword.mobile.css
@@ -51,23 +51,6 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
   font-size: 0.7em;
 }
 
-.cw-clue-number {
-  flex-shrink: 0;
-  text-align: right;
-  min-width: 1.5rem;
-  margin-left: 0.2rem;
-  margin-right: 0.5rem;
-  font-weight: 700;
-  font-size: 0.65em;
-}
-
-.cw-clue-text {
-  flex: 1 1 auto;
-  word-wrap: break-word;
-  margin-right: 6px;
-  font-weight: 100;
-}
-
 /**
 * Utilities
 **/
@@ -85,12 +68,6 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
   width: 350px;
 }
 
-.cw-top-text {
-  align-items: flex-start;
-  display: flex;
-  text-align: left;
-  line-height: 1.2;
-}
 
 .cw-clues-title {
   align-items: flex-end;
@@ -208,22 +185,6 @@ html.mobile-mode {
 .crossword.mobile #cw-puzzle-grid {
   display: inline-block;
   margin-top: 48px;
-}
-
-/* Show clue along top */
-.crossword.mobile .cw-top-text-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 48px;
-  font-size: 0.9em;
-  background: var(--top-text-wrapper-bg-color);
-  color: var(--top-text-wrapper-text-color);
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  margin: 0 auto;
-  width: fit-content;
-  max-width: 100%;
 }
 
 .crossword.mobile .cw-buttons-holder {
