--- a/css/crossword.shared.css
+++ b/css/crossword.shared.css
@@ -498,6 +498,37 @@ div.is-dragover {
   flex-direction: column;
 }
 
+/** Top text **/
+.cw-top-text-wrapper {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  text-align: center;
+  align-items: center;
+  display: inline-flex;
+  height: 65px;
+  background: var(--top-text-wrapper-bg-color);
+  color: var(--top-text-wrapper-text-color);
+  flex-shrink: 0;
+  border-radius: 4px;
+  box-shadow: 0px -2px 15px 6px rgba(0, 0, 0, 0.15);
+}
+
+.cw-clue-number {
+  flex-shrink: 0;
+  text-align: right;
+  min-width: 1.7rem;
+  margin-left: 0.3rem;
+  margin-right: 0.7rem;
+  font-weight: 600;
+}
+
+.cw-clue-text {
+  flex: 1 1 auto;
+  word-wrap: break-word;
+  margin-right: 3px;
+}
+
 /** Clues **/
 .cw-clues {
   display: flex;
