--- a/css/crosswordnexus.css
+++ b/css/crosswordnexus.css
@@ -136,21 +136,6 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
   margin-right: 3px;
 }
 
-.cw-clue-number {
-  flex-shrink: 0;
-  text-align: right;
-  min-width: 1.7rem;
-  margin-left: 0.3rem;
-  margin-right: 0.7rem;
-  font-weight: 600;
-}
-
-.cw-clue-text {
-  flex: 1 1 auto;
-  word-wrap: break-word;
-  margin-right: 3px;
-}
-
 /**
 * Utilities
 **/
@@ -178,20 +163,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
   margin: 0 auto;
 }
 
-.cw-top-text-wrapper {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  text-align: center;
-  align-items: center;
-  display: inline-flex;
-  height: 65px;
-  background: var(--top-text-wrapper-bg-color);
-  color: var(--top-text-wrapper-text-color);
-  flex-shrink: 0;
-  border-radius: 4px;
-  box-shadow: 0px -2px 15px 6px rgba(0, 0, 0, 0.15);
-}
+
 
 .cw-top-text {
   align-items: flex-start;
@@ -332,19 +304,6 @@ html.mobile-mode {
   height: auto;
   max-width: 100%;
   margin-top: 56px;
-}
-
-/* Show clue along top */
-.crossword.mobile .cw-top-text-wrapper {
-  height: 48px;
-  font-size: 0.9em;
-  padding: 4px 8px;
-  display: flex;
-  align-items: center;
-  background: var(--top-text-wrapper-bg-color);
-  color: var(--top-text-wrapper-text-color);
-  z-index: 2;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .crossword.mobile .cw-buttons-holder {
